--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc src/index.ts",
-    "exec": "node src/index.js"
+    "exec": "node src/index.js",
+    "format": "prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/node": "^20.12.12",
+    "prettier": "3.2.5",
     "typescript": "^5.4.5"
   },
   "dependencies": {
